k8s/staging/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobs-service
  labels:
    apps: jobs-service
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      component: jobs-service
  template:
    metadata:
      labels:
        component: jobs-service
    spec:
      containers:
      - name: jobs-service
        image: goodtalent/jobs-service:$COMMIT_SHA1
        imagePullPolicy: Always
        command: ["/bin/sh"]        
        args: ["-c","npm run start"]
        ports:
          - containerPort: 5002
            name: jobs
          - containerPort: 9001
            name: jobs-rpc
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jobs
  annotations:
    kubernetes.io/ingress.class: nginx #nginx prod-nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2 #nginx re-write rule
  labels:
    app: jobs
  namespace: staging #master / staging
spec:
  rules:
    - http:
        paths:
        - path: /jobs(/|$)(.*)
          backend:
            serviceName: jobs
            servicePort: 5002
        - path: /jobs-rpc
          backend:
            serviceName: jobs
            servicePort: 5000

---
apiVersion: v1
kind: Service
metadata: 
  name: jobs
  labels:
    app: jobs
  namespace: staging #default / staging
spec:
  type: ClusterIP  
  selector:
    component: jobs-service
  ports:
    - name: jobs
      port: 5002
      targetPort: 5002
    - name: jobs-rpc
      port: 9001
      targetPort: 9001
